fix: panel overflow issue

--- a/packages/ui/src/scss/style.scss
+++ b/packages/ui/src/scss/style.scss
@@ -293,7 +293,6 @@ body,
 
 .spectrum-Panel-Item {
   padding: var(--spectrum-global-dimension-size-200);
-  overflow-y: hidden;
 }
 .spectrum-Panel-Item--overflow {
   overflow: auto;
